--- a/env.example
+++ b/env.example
@@ -1,8 +1,16 @@
 # Project Enigma Frontend Environment Variables
 # Copy this file to .env and modify as needed
 
-# Backend API URL
-VITE_API_BASE_URL=http://localhost:8000
+# Backend API Configuration
+# Use /api for development (proxy) or full URL for production
+VITE_API_URL=/api
+
+# CopilotKit Runtime Configuration
+# For development without CopilotKit backend integration, leave commented out
+# VITE_COPILOT_RUNTIME_URL=http://localhost:8000/copilotkit
+
+# For production or when using CopilotKit backend
+# VITE_COPILOT_RUNTIME_URL=https://your-backend.com/copilotkit
 
 # WebSocket URL for real-time updates
 VITE_WS_URL=ws://localhost:8000/ws
